Looks a lot better.

--- a/a_differential_datalog_interpreter/software.bib
+++ b/a_differential_datalog_interpreter/software.bib
@@ -1,156 +1,3 @@
-@inproceedings{nexus,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{microzee,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{sqlserver,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{rust_lang,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{rust2014,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{rustbelt,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{rustsafety,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{rayon,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{primitive_search,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{rust_btree,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{opt_sys_alg_ev_dat,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{log_dab,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{complexity_of_dred,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{dd,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{benchmark:cost,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{benchmark:scalability,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
-@inproceedings{benchmark:csda,
-  author= {author},
-  year = {2050},
-  month = {0},
-  pages = {0-0},
-  title = {bla},
-  isbn = {2134-1234-431-43},
-  doi = {192.168.1.0}
-}
 @article{datalog,
 author = {Ceri, Stefano and Gottlob, Georg and Tanca, Letizia},
 year = {1989},
@@ -443,4 +290,56 @@ doi = {10.1007/11575467_8}
   author={Leonid Ryzhyk and Mihai Budiu},
   booktitle={Datalog},
   year={2019}
+}
+@inproceedings{souffle_join,
+  title={Building a Join Optimizer for Souffl{\'e}},
+  author={Samuel Arch and Xiaowen Hu and David Zhao and Pavle Subotic and Bernhard Scholz},
+  booktitle={International Workshop/Symposium on Logic-based Program Synthesis and Transformation},
+  year={2022}
+}
+@article{dbsp,
+  title={DBSP: Automatic Incremental View Maintenance for Rich Query Languages},
+  author={Mihai Budiu and Frank McSherry and Leonid Ryzhyk and Val Tannen},
+  journal={Proc. VLDB Endow.},
+  year={2022},
+  volume={16},
+  pages={1601-1614}
+}
+@inproceedings{abiteboul,
+  title={Foundations of Databases},
+  author={Serge Abiteboul and Richard Hull and Victor Vianu},
+  year={1994}
+}
+@inproceedings{dredbf,
+  title={Incremental Update of Datalog Materialisation: the Backward/Forward Algorithm},
+  author={Boris Motik and Yavor Nenov and Robert Piro and Ian Horrocks},
+  booktitle={AAAI Conference on Artificial Intelligence},
+  year={2015}
+}
+@article{lubm,
+  title={LUBM: A benchmark for OWL knowledge base systems},
+  author={Yuanbo Guo and Zhengxiang Pan and Jeff Heflin},
+  journal={J. Web Semant.},
+  year={2005},
+  volume={3},
+  pages={158-182}
+}
+@inproceedings{gtgraph,
+  title={GTgraph : A Synthetic Graph Generator Suite},
+  author={David A. Bader and Kamesh Madduri},
+  year={2006}
+}
+@inproceedings{descr_to_dlog,
+  title={Description logic programs: combining logic programs with description logic},
+  author={Benjamin N. Grosof and Ian Horrocks and Raphael Volz and S. Decker},
+  booktitle={The Web Conference},
+  year={2003}
+}
+@article{nexus,
+  title={Fast datalog evaluation for batch and stream graph processing},
+  author={Muhammad Imran and G{\'a}bor E. G{\'e}vay and Jorge-Arnulfo Quian{\'e}-Ruiz and Volker Markl},
+  journal={World Wide Web},
+  year={2022},
+  volume={25},
+  pages={971-1003}
 }
