--- a/a_differential_datalog_interpreter/a_differential_datalog_interpreter.tex
+++ b/a_differential_datalog_interpreter/a_differential_datalog_interpreter.tex
@@ -13,7 +13,6 @@
 	2023}{Cascais, Lisbon, Portugal}
 
 \usepackage{amsmath}
-\usepackage{amssymb}
 \usepackage{multirow}
 \usepackage{microtype}
 \usepackage{tikz,tikz-qtree}
@@ -132,7 +131,8 @@ time, therefore restricting its use case to the specific scenarios where such dr
 There has been no study evaluating the isolated benefit of DD to datalog evaluation. Therefore
 the suitability of DD in this context remains unclear, emphasizing the importance of further
 research on its potential benefits and limitations in incremental view maintenance.
-\paragraph{Contributions.} In this work, we directly address the posited research question by developing a datalog
+
+\textbf{Contributions.} In this work, we directly address the posited research question by developing a datalog
 interpreter utilizing DD. We then compare our implementation with other prototypical datalog
 interpreters, created from scratch, that share as many components as it is reasonable, in order to isolate
 the effect of DD in both runtime performance and memory efficiency. This allows us to more
@@ -142,7 +142,8 @@ Unlike DDLog, which compiles a datalog program into its evaluation as a fixed DD
 approach involves writing a single DD program capable of evaluating any datalog program. This
 eliminates the need for compilation and provides the additional benefit of incremental maintenance for both rule
 removals and additions.
-\paragraph{Structure of the paper.}
+
+\textbf{Structure of the paper.}
 \begin{itemize}
 	\item{\textbf{Background.}} A brief recapitulation of the general background, with datalog, its evaluation
 	methods, and the delete-rederive method being formally introduced.
@@ -150,12 +151,11 @@ removals and additions.
 	a dataflow is showcased and explained.
 	\item{\textbf{System.}} The developed interpreters are described, alongside with all optimizations and
 	benchmark-relevant information.
-	\item{\textbf{Benchmarks.}} An empirical evaluation of all reasoners, over multiple different programs and
+	\item{\textbf{Evaluation.}} An empirical evaluation of all reasoners, over multiple different programs and
 	datasets is undertaken.
 \end{itemize}
 \section{Related Works}
-
-\textbf{DD Applications and Related Works.} There are two relevant DD projects that are worth
+\textbf{DD Applications and Related Projects.} There are two relevant DD projects that are worth
 mentioning. One of them is Graspan, a parallel graph processing system that uses DD for efficient
 incremental computation of static program analyses over large codebases.
 
@@ -199,7 +199,6 @@ iteration, so implementing reasoning did not need to extend the core of the unde
 successful attempt at creating a distributed implemention has been Nexus\cite{nexus}, that is also built on Flink,
 and makes use of its most advanced feature, incremental stream processing.
 \section{Background}
-
 \textit{Datalog}\cite{datalog} is a declarative programming language. A program $P$ is a set of
 rules $r$, with each $r$ being a restriction of tuple-generating dependencies: \[H(x_1, ..., x_j) \leftarrow \bigwedge_{i=1}^kB_i(x_1, ..., x_j) \]
 with $k$, $j$ as finite integers, $x$ as terms, and each $B_i$ and $H$ as predicates. A term can belong
@@ -208,7 +207,6 @@ either to the set of variables, or constants. The set of all $B_i$ is called the
 A rule $r$ is said to be datalog, if no predicate is negated, and all variables in the head appear somewhere in the body,
 thereby not there being the possibility for existential variables to exist, conversely, a datalog program is one in which
 all rules are datalog.
-
 \begin{exmp}{Datalog Program}\label{ex1}
 	\begin{align*}
 		P = \{\text{SubClassOf}(?x, ?y) \leftarrow & \text{SubClassOf}(?x, ?y), \text{SubClassOf}(?y, ?z) \}
@@ -231,7 +229,6 @@ that $IDB = \emptyset$ at the start, at some point $I_C(DB) = DB$, since there w
 point is the \textit{least fixed point} of $I_c(DB)$\cite{datalog}. Computing the \textit{least fixed point} as
 described, recursively applying the immediate consequence, is called Naive evaluation.
 \subsection{Semi-Naive Evaluation}
-
 The semi-naive evaluation algorithm \cite{datalog} is a widely-used technique for improving naive evaluation.
 Given a Datalog program $P$ and an $EDB$, the algorithm iteratively computes the $IDB$ in the same manner as
 naive evaluation, with the addition of maintaining a set of new delta facts $\Delta^+$ that are generated in
@@ -240,7 +237,6 @@ each iteration, that are utilized in a new delta program $\Delta^+P$.
 Given a program $P$ with rules $r_0, ..., r_n$, with bodies $b(r) = \{b_0, ..., b_k\}$ and heads $h(r)$, the
 delta program will generate one new $\Delta$rule for each $b_j$ in each rule body $b(r_i)$, in order to
 represent that only facts that have been recently inferred are being taken into account.
-
 \begin{exmp}{Semi-naive Evaluation Delta Program}
 	\begin{align*}
 		P = \{TC(?x, ?y) \leftarrow        & Edge(?x, ?y)                  \\
@@ -251,7 +247,6 @@ represent that only facts that have been recently inferred are being taken into 
 	\end{align*}
 	\label{exsne}
 \end{exmp}
-
 In theory, the semi-naive evaluation algorithm improves the efficiency of Datalog evaluation by avoiding
 the recomputation of facts that have already been derived in previous iterations. This method is particularly
 efficient for certain classes of Datalog programs that are common in practice. Example \ref{exsne} shows
@@ -261,7 +256,6 @@ indexes and set operations to keep track of the most recently inferred facts, he
 naive evaluation might outperform it.
 
 \subsection{Delete-Rederive}
-
 Both the regular semi-naive and naive evaluation methods are already incremental, and easily handles the
 addition of data. One merely has to continue the evaluation with all previous data as the most recent delta.
 
@@ -272,7 +266,6 @@ facts being retracted, and then another that attempts to find alternative deriva
 Given a program $P$ with rules $r_0, ..., r_n$, with bodies $b(r) = \{b_0, ..., b_k\}$ and heads $h(r)$, the
 overdeletion program will generate one new $-$rule for each $b_j$ in each rule body $b(r_i)$, in order to represent
 that if such fact were to be deleted, then $h(r_i)$ would not hold true.
-
 \begin{exmp}{DRED Overdeletion Program}
 	\begin{align*}
 		P = \{TC(?x, ?y) \leftarrow   & Edge(?x, ?y)              \\
@@ -283,7 +276,6 @@ that if such fact were to be deleted, then $h(r_i)$ would not hold true.
 	\end{align*}
 	\label{ex6}
 \end{exmp}
-
 On example \ref{ex6} negative predicates represent overdeletion targets. For instance, if \verb|Edge(2, 3)| is
 being deleted, then \verb|TC(2, 3)| will be deleted, and any other inferred fact that depends on it. Given that
 it is a regular datalog program, it can be efficiently evaluated with semi-naive evaluation.
@@ -292,7 +284,6 @@ The next step is to compute the alternative derivations of the deleted facts, si
 still hold true. The alternative derivation program will generate one new $+$rule for each $r_i$ in $P$, with
 one extra $-$ head predicate per body, representing an overdeleted fact. The $+$ program requires the overdeleted
 facts to not be present.
-
 \begin{exmp}{DRED Alternative Derivation Program}
 	\begin{align*}
 		P = \{TC(?x, ?y) \leftarrow  & Edge(?x, ?y)                          \\
@@ -302,7 +293,6 @@ facts to not be present.
 	\end{align*}
 	\label{ex7}
 \end{exmp}
-
 The output relations from example \ref{ex7} represent the data that has to be put back into the materialization.
 The rationale for alternative derivations is that, for $r_1$, for instance, if the edge \verb|TC(3, 4)| was
 overdeleted, because of there being \verb|Edge(1, 2)| and \verb|TC(2, 3)|, if \verb|Edge(3, 4)| was not deleted, by
@@ -310,9 +300,9 @@ rule $r_0$, then there is an alternative derivation for \verb|TC(3, 4)|.
 
 As it can be seen, computing the maintenance of the materialization implies evaluating a program bigger than the
 materialization itself, however, due to the fact that it is evaluated with semi-naive evaluation, the asymptotic
-complexity remains the same\cite{complexity_of_dred}. Nonetheless, in practice, deletion is often much slower than
-addition, as it can be trivially seen by the worst-possible scenario, in which all facts are deleted, whereby while
-materialization would be free, DRED would inquire an expensive overdeletion computation.
+complexity remains the same. Nonetheless, in practice, deletion is often much slower than addition, as it can be
+trivially seen by the worst-possible scenario, in which all facts are deleted, whereby while materialization would
+be free, DRED would inquire an expensive overdeletion computation.
 
 \subsection{Substitution-based evaluation}
 The most impactful aspect of both of the introduced evaluation mechanisms is the implementation
@@ -332,7 +322,7 @@ The substitution-based method computes the immediate consequence of the rule $r$
 Define the initial set of substitutions as $\Sigma_0 = \{ \sigma_0 \}$, where $\sigma_0$ is an empty substitution. For
 each body atom $b_m$, find the set of ground facts $F_j \subseteq F$ that match $b_m$.
 
-\begin{algorithm}[H]
+\begin{algorithm}
 	\SetAlgoLined
 	\Input{$\Sigma_{0}$, set of ground facts $F$, head atom $h$, body atom list $B$}
 	\Output{Immediate Consequence $I$}
@@ -350,7 +340,6 @@ each body atom $b_m$, find the set of ground facts $F_j \subseteq F$ that match 
 	}
 	\caption{Substitution-based Immediate Consequence}
 \end{algorithm}
-
 There is a noteworthy performance issue that arises due to the interaction between the substitution-based method
 and DRED. During the alternate derivation phase, the new program has one more body atom. This can be prohibitively
 more expensive to evaluate than the original program, since one extra body atom implies one extra iteration, which
@@ -378,7 +367,6 @@ relevant relational algebra operators and their semantics:
 	\item Product $\times(R, T) = \{(a, b) | a \in R \wedge b \in T \}$
 	\item Join $\Join_{i=j} = \{(a, b) | a \in R \wedge b \in T \wedge a(i) == b(j)\}$
 \end{itemize}
-
 A relational algebra expression is in the $\mathcal{SPJ}$ form if it consists solely of select, project and join
 operators. This form is very often seen in practice, being equivalent to \verb|SELECT ... FROM ... WHERE ...| SQL
 queries, and highly benefits from being equivalent to conjunctive queries, that are equivalent to single-rule and
@@ -389,7 +377,6 @@ operations, but lifted to the multiset domain, which implies that there must be 
 into datalog's set semantics.
 
 \section{Differential Evaluation}
-
 \subsection{Differential Dataflow} is a computational model that generalizes incremental processing to
 times that are possibly partially ordered, and specifically operates over multisets of differences, which
 can be either additions or retractions, instead of over the full data.
@@ -430,19 +417,15 @@ computation:
 	\alpha_2 & = \delta A_{0, 2} = A_{0, 2} - (\delta A_{0, 0} + \delta A_{0, 1} )                  \\
 	\alpha_3 & = \delta A_{1, 1} = A_{1, 1} - (\delta A_{0, 0} + \delta A_{0, 1} + \delta A_{1, 0})
 \end{align*}
-
 Within the context of datalog, the aforementioned evaluation semantics provide a full alternative to the way
 incremental datalog evaluation is currently done, most specifically, the practical advantage of differential
 dataflow, is that instead of using semi-naive evaluation and DRED, one can just describe the evaluation process
 as a dataflow, and have both additions and deletions handled in the same way, with automatic parallelism and
 distribution.
-
 \subsection{Differential Substitution-based Method}
-
 We now present a translation of algorithm I to DD, by emulating sequentially iterating over
 each rule's body with relational joins, notably, all relational algebra operators are available through a map-
 reduce-like API.
-
 \begin{figure} [htb!]
 	\centering
 	\begin{tikzpicture}[->,>=stealth,auto,node distance=6cm,
@@ -509,10 +492,9 @@ reduce-like API.
 		\path (join3.west) edge[bend left] (facts_var.west);
 		\path (map) edge[bend left] (join3.east);
 	\end{tikzpicture}
-	\caption{}
+	\caption{Substitution method dataflow}
 	\label{fig:substitution_simple_ddflow}
 \end{figure}
-
 Figure \ref{fig:substitution_simple_ddflow} depicts the substitution-based method as a dataflow. Superscripts denote
 points of the dataflow that require further explanation. Furthermore, for clarity, we establish the shape of the
 data, and the \verb|Var| suffix, that both facts and substitutions eventually take up. a Variable is used to express
@@ -526,7 +508,6 @@ having had been omitted. $\Sigma_0$ is the stream of empty substitutions indexed
 be pre populated with one substitution, the empty one. We assume that rules have an unique identifier. Facts is
 the relation-indexed stream of facts, and rules is the stream of rules, with two indexes, created with the operations
 with superscripts $1$ and $2$.
-
 \begin{enumerate}
 	\item The first rule index indexes rules first by their identifier, and then by each of its body atoms, enumerating
 	      them sequentially, imposing an order of evaluation as the original algorithm.
@@ -541,7 +522,6 @@ with superscripts $1$ and $2$.
 	\item This is the last step of the algorithm, where all final substitutions are applied to the head of each rule, index
 	      $2$, to then create new ground facts.
 \end{enumerate}
-
 \section{System}
 In this section we provide a technical overview of the implemented reasoners, and what is shared between them, alongside
 a novel indexing technique for the substitution-based method, that at the cost of increased memory usage, can significantly
@@ -648,12 +628,11 @@ also contain this indexing.
 		      \item Fresh atoms - Applying all $\sigma : \Sigma_0$ to $-R(?x, ?z)$ yields $-R(?x, ?z)$
 		      \item Index 1 - Index all fresh atoms with the positions of their constant terms as keys: $\{[] : [[?x, ?z]]\}$
 		      \item Index 2 - Index $-R$ based on all distinct values of the column keys of index 1 : $\{[]: [[a, c], [b, d]]\}$
-		      \item Index 3 - Join Index 1 with Index 2 - $\{[] : ([[?x, ?z]], \{[]: [[a, c], [b, d]]\})\}$
-		      \item Join both sides of the resulting tuples:
-		            \begin{itemize}
-			            \item left: $([?x, ?z], [[a, c]])$
-			            \item right: $([?x, ?z], [[b, d]])$
-		            \end{itemize}
+		      \item Index 3 - Join Index 1 with Index 2:
+		            \begin{enumerate}
+			            \item $([?x, ?z], [[a, c]])$
+			            \item $([?x, ?z], [[b, d]])$
+		            \end{enumerate}
 		      \item Attempt to unify:
 		            \begin{enumerate}
 			            \item unification: -R(?x, ?z) U -R(a, c) = $\{?x \rightarrow a, ?z \rightarrow c\}$
@@ -666,15 +645,10 @@ also contain this indexing.
 		      \item Index 1 - Index all fresh atoms with the positions of their constant terms as keys: $\{[0] : [[a, ?z], [b, ?z]]\}$
 		      \item Index 2 - Index $T$ based on all distinct values of the column keys of index 1  $\{[0]: \{[a]: [[b]], [[b]]: [[c]], [c]: [[d]]\}\}$
 		      \item Index 3 - Join Index 1 with Index 2:
-		            \begin{itemize}
-			            \item left: $([?y], [[b]]])$
-			            \item right: $([?y], [[c]]])$
-		            \end{itemize}$\{[0] : ([[a, ?y], [b, ?y]], \{[a]: [[b]], [[b]]: [[c]], [c]: [[d]]\})\}$
-		      \item Join both sides of the resulting tuples:
-		            \begin{itemize}
-			            \item left: $([?y], [[b]]])$
-			            \item right: $([?y], [[c]]])$
-		            \end{itemize}
+		            \begin{enumerate}
+			            \item $([?y], [[b]]])$
+			            \item $([?y], [[c]]])$
+		            \end{enumerate}
 		      \item Attempt to unify:
 		            \begin{enumerate}
 			            \item unification: T(a, ?y) U T(a, b) = $\{?x \rightarrow a, ?y \rightarrow b, ?z \rightarrow c\}$
@@ -686,8 +660,11 @@ also contain this indexing.
 		      \item Fresh atoms - Applying all $\sigma : \Sigma_2$ to $T(?y, ?z)$ yields $T(b, c)$, $T(c, d)$
 		      \item Index 1 - Index all fresh atoms with the positions of their constant terms as keys: $\{[0, 1] : [[b, c], [c, d]]\}$
 		      \item Index 2 - Index $T$ based on all distinct values of the column keys of index 1 : $\{[0, 1]: \{[a, b]: [[]], [b, c]: [[]], [c, d]: [[]]\}\}$
-		      \item Index 3 - Join Index 1 with Index 2 - $\{[0, 1] : ([[b, c], [c, d]], \{[a, b]: [[]], [b, c]: [[]], [c, d]: [[]]\})\}$
-		      \item Join both sides of the resulting tuples: $[([b, c], [[]]), ([c, d], [[]])]$
+		      \item Index 3 - Join Index 1 with Index 2:
+		            \begin{enumerate}
+			            \item $([b, c], [[]])$
+			            \item $([c, d], [[]])$
+		            \end{enumerate}
 		      \item Attempt to unify:
 		            \begin{enumerate}
 			            \item unification: T(b, c) U T(b, c) = $\{?x \rightarrow a, ?y \rightarrow b, ?z \rightarrow c\}$
@@ -695,7 +672,6 @@ also contain this indexing.
 		            \end{enumerate}
 	      \end{enumerate}
 \end{enumerate}
-
 From this new example, it can be seen that the indexing scheme is relatively simple, relying on creating new indices that would allow unification
 to never wastefully occur. We now structure it as Algorithm II.
 
@@ -709,15 +685,14 @@ The algorithm relies on two main indexes:
 	\item $I_2 : P(a) \to I_3$, where $I_3 : R(F) \to 1^{F}$, and $1^{F}$ is the subset
 	      of $F$ such that all $a$ have the same $R(P(a), a)$.
 \end{enumerate}
-
-\begin{algorithm}[H]
+\begin{algorithm}
 	\SetAlgoLined
 	\Input{$\Sigma_{0}$, set of ground facts $F$, head atom $H$, body atom list $B$}
 	\Output{Immediate Consequence $I$}
 	\For{each $i = 1, 2, \ldots, m$}{
 	Apply $\Sigma_{i-1}$ to the current body atom to obtain fresh atoms $\mathfrak{A}$\;
 	Create the first index $I_1 : P(a) \to 1^{\mathfrak{A}}$\;
-	Create the second index $I_2 : P(a) \to I_3$, where $I_3 : R(F) \to 1^{F}$\;
+	Create the second index $I_2 : P(a) \to I_3$\;
 	Create the last index by joining Index 1 and Index 2: $I_4(a) = (I_1(a), I_2(a))$ for each $a \in \mathfrak{A}$\;
 	\For{$(S_1, S_2) \in I_4$}{
 	Unify each element in $S_1$ with each element in $S_2$\;
@@ -734,7 +709,6 @@ The algorithm relies on two main indexes:
 	}
 	\caption{Substitution-based Immediate Consequence with Demand-driven Multiple-column-based Indexing}
 \end{algorithm}
-
 All indexing steps are $O(|F|)$ in time and data complexity, save for index two, that has worst-case data complexity of $O(|F| \cdot 2^{|a|}y)$, with $2^{|a|}$
 representing the powerset of the number of terms in some atom $a$, and $F$ such that it has only atoms $a$. The product with the powerset arises due to how
 indexing occurs by mapping all unique combinations of constant terms of fresh atoms, which in the worst-case could be exponential to arity.
@@ -810,15 +784,13 @@ indexing occurs by mapping all unique combinations of constant terms of fresh at
 		\path (join3.west) edge[bend left] (facts_var.west);
 		\path (heads_ucc) edge[bend left] (join3.east);
 	\end{tikzpicture}
-	\caption{}
+	\caption{Substitution method with indexing dataflow}
 	\label{fig:substitution_indexed_ddflow}
 \end{figure}
-
 Figure \ref{fig:substitution_indexed_ddflow} displays the DD version of Algorithm II, that mostly remains exactly the same, save for
 new operations happening during the phase before iteration. We now clarify the points of interest in the dataflow. There were no differences in the steps inside
 iteration, aside from joins happening through the vector of constant positions and relation symbols,
 instead of only relation symbols.
-
 \begin{enumerate}
 	\item The first \verb|map| operator remains the same, indexing rules by their identifier and body size, used to ensure
 	      that only fully expanded substitutions will be applied to rule heads. The same as superscript $2$ in \ref{fig:substitution_simple_ddflow}.
@@ -830,7 +802,6 @@ instead of only relation symbols.
 	\item With superscript $2$, the input fact stream can be immediately indexed by the necessary constant position combinations. This is done by a join on
 	      relation symbol, that will index each fact by all column combinations.
 \end{enumerate}
-
 This dataflow is possibly much more efficient. An arrangement in DD is a pre-computed, indexed representation of a collection that allows
 for efficient querying and manipulation of the data. These arrangements play a crucial role in optimizing the performance of dataflows. By carefully choosing
 which arrangements to create and maintain, it is possible to minimize the computational overhead and reduce the need for expensive recomputations.
@@ -838,56 +809,53 @@ which arrangements to create and maintain, it is possible to minimize the comput
 Most specifically, arrangements dictate the level of join parallelism, by the fact that the join operator shards the data among workers by the key of
 the arrangement, partitioning the data to be joined by a more fine-grained key than relation symbol, such as relation symbol and positions occupied by constants,
 constant values, as on Algorithm II, a higher degree of parallelism could be unlocked.
-
-\section{Benchmarks}
+\section{Evaluation}
 Three thorough experiments were conducted in order to showcase relative performance, scalability, and memory usage, of all reasoners, with the intent being twofold:
 to evaluate the performance characteristics of DD, in isolation of virtually all other elements, and to establish as to whether general algorithmic
 improvements, such as the demand-driven indexing scheme, are portable to DD.
 
 \textbf{Setup.} The experiments were run on a google-cloud-provisioned x86 machine of type e2-standard-16, with 16 intel skylake cores and 64 gigabytes of RAM. Each
-benchmark measurement was taken 50 times and averaged out.
-\begin{exmp}{RhoDFS inference rules}
-	\begin{align*}
-		T(?x, ?y, ?z) \leftarrow                 & rdf(?x, ?y, ?z)                \\
-		T(?y, rdf:type, ?x) \leftarrow           & T(?a, rdfs:domain, ?x),        \\
-		                                         & T(?y, ?a, ?z)                  \\
-		T(?z, rdf:type, ?x) \leftarrow           & T(?a, rdfs:range, ?x),         \\
-		                                         & T(?y, ?a, ?z)                  \\
-		T(?x, rdfs:subPropertyOf, ?z) \leftarrow & T(?x, rdfs:subPropertyOf, ?y), \\
-		                                         & T(?y, rdfs:subPropertyOf, ?z)  \\
-		T(?x, rdfs:subClassOf, ?z) \leftarrow    & T(?x, rdfs:subClassOf, ?y),    \\
-		                                         & T(?y, rdfs:subClassOf, ?z)     \\
-		T(?z, rdf:type, ?y) \leftarrow           & T(?x, rdfs:subClassOf, ?y),    \\
-		                                         & T(?z, rdf:type, ?x)            \\
-		T(?x, ?b, ?y) \leftarrow                 & T(?a, rdfs:subPropertyOf, ?b), \\
-		                                         & T(?x, ?a, ?y)
-	\end{align*}
-	\label{program:rhodfs}
-\end{exmp}
-
-\begin{exmp}{RhoDFS-s inference rules}
-	\begin{align*}
-		rdfs:domain(?a, ?x) \leftarrow        & rdf(?a, rdfs:domain, ?x)        \\
-		rdfs:range(?a, ?x) \leftarrow         & rdf(?a, rdfs:range, ?x)         \\
-		rdf:type(?y, ?x) \leftarrow           & rdf(?y, rdf:type, ?x)           \\
-		rdfs:subPropertyOf(?x, ?z) \leftarrow & rdf(?x, rdfs:subPropertyOf, ?z) \\
-		rdfs:subClassOf(?x, ?z) \leftarrow    & rdf(?x, rdfs:subClassOf, ?z)    \\
-		rdf:type(?y, ?x) \leftarrow           & rdfs:domain(?a, ?x),            \\
-		                                      & rdf(?y, ?a, ?z)                 \\
-		rdf:type(?z, ?x) \leftarrow           & rdfs:range(?a, ?x),             \\
-		                                      & rdf(?y, ?a, ?z)                 \\
-		rdfs:subPropertyOf(?x, ?z) \leftarrow & rdfs:subPropertyOf(?x, ?y),     \\
-		                                      & rdfs:subPropertyOf(?y, ?z)      \\
-		rdfs:subClassOf(?x, ?z) \leftarrow    & rdfs:subClassOf(?x, ?y),        \\
-		                                      & rdfs:subClassOf(?y, ?z)         \\
-		rdf:type(?z, ?y) \leftarrow           & rdfs:subClassOf(?x, ?y),        \\
-		                                      & rdf:type(?z, ?x)                \\
-		rdf(?x, ?b, ?y) \leftarrow            & rdfs:subPropertyOf(?a, ?b),     \\
-		                                      & T(?x, ?a, ?y)
-	\end{align*}
-	\label{program:rhodfss}
-\end{exmp}
-
+benchmark measurement was taken 70 times, with the 20 measurements of most variance removed, and averaged out.
+% \begin{exmp}{RhoDFS inference rules}
+% 	\begin{align*}
+% 		T(?x, ?y, ?z) \leftarrow                 & rdf(?x, ?y, ?z)                \\
+% 		T(?y, rdf:type, ?x) \leftarrow           & T(?a, rdfs:domain, ?x),        \\
+% 		                                         & T(?y, ?a, ?z)                  \\
+% 		T(?z, rdf:type, ?x) \leftarrow           & T(?a, rdfs:range, ?x),         \\
+% 		                                         & T(?y, ?a, ?z)                  \\
+% 		T(?x, rdfs:subPropertyOf, ?z) \leftarrow & T(?x, rdfs:subPropertyOf, ?y), \\
+% 		                                         & T(?y, rdfs:subPropertyOf, ?z)  \\
+% 		T(?x, rdfs:subClassOf, ?z) \leftarrow    & T(?x, rdfs:subClassOf, ?y),    \\
+% 		                                         & T(?y, rdfs:subClassOf, ?z)     \\
+% 		T(?z, rdf:type, ?y) \leftarrow           & T(?x, rdfs:subClassOf, ?y),    \\
+% 		                                         & T(?z, rdf:type, ?x)            \\
+% 		T(?x, ?b, ?y) \leftarrow                 & T(?a, rdfs:subPropertyOf, ?b), \\
+% 		                                         & T(?x, ?a, ?y)
+% 	\end{align*}
+% 	\label{program:rhodfs}
+% \end{exmp}
+% \begin{exmp}{RhoDFS-s inference rules}
+% 	\begin{align*}
+% 		rdfs:domain(?a, ?x) \leftarrow        & rdf(?a, rdfs:domain, ?x)        \\
+% 		rdfs:range(?a, ?x) \leftarrow         & rdf(?a, rdfs:range, ?x)         \\
+% 		rdf:type(?y, ?x) \leftarrow           & rdf(?y, rdf:type, ?x)           \\
+% 		rdfs:subPropertyOf(?x, ?z) \leftarrow & rdf(?x, rdfs:subPropertyOf, ?z) \\
+% 		rdfs:subClassOf(?x, ?z) \leftarrow    & rdf(?x, rdfs:subClassOf, ?z)    \\
+% 		rdf:type(?y, ?x) \leftarrow           & rdfs:domain(?a, ?x),            \\
+% 		                                      & rdf(?y, ?a, ?z)                 \\
+% 		rdf:type(?z, ?x) \leftarrow           & rdfs:range(?a, ?x),             \\
+% 		                                      & rdf(?y, ?a, ?z)                 \\
+% 		rdfs:subPropertyOf(?x, ?z) \leftarrow & rdfs:subPropertyOf(?x, ?y),     \\
+% 		                                      & rdfs:subPropertyOf(?y, ?z)      \\
+% 		rdfs:subClassOf(?x, ?z) \leftarrow    & rdfs:subClassOf(?x, ?y),        \\
+% 		                                      & rdfs:subClassOf(?y, ?z)         \\
+% 		rdf:type(?z, ?y) \leftarrow           & rdfs:subClassOf(?x, ?y),        \\
+% 		                                      & rdf:type(?z, ?x)                \\
+% 		rdf(?x, ?b, ?y) \leftarrow            & rdfs:subPropertyOf(?a, ?b),     \\
+% 		                                      & T(?x, ?a, ?y)
+% 	\end{align*}
+% 	\label{program:rhodfss}
+% \end{exmp}
 \begin{table*}
 	\caption{Dataset Overview}
 	\begin{tabular}{|c|c|c|}
@@ -917,17 +885,16 @@ including LUBM\cite{lubm}, are synthetic, with the difference being that there a
 \begin{itemize}
 	\item \textbf{LUBM} is a classic inference benchmark dataset for both RhoDFS and OWL2RL rulesets. The data is divided in two parts, the TBox, terminological box, that holds
 	      an ontology able to describe universities, and the ABox, assertional box, that asserts facts about universities using the terminology in the TBox. The RhoDFS ruleset, depicted
-	      on \ref{program:rhodfs}, is relatively simple, but complex, there being only a single relation, that is mutually recursive in every single rule. RhoDFS-s \ref{program:rhodfss} is an improved version of RhoDFS,
-	      that creates new relations for every single constant combination in the original program, avoiding every body atom implying a full dataset, mimicking the relational selection. The
-	      last ruleset, OWL2RL, has over 100 rules and is by far the most complex, representing the lower bound of OWL2RL implications, specific of the LUBM Tbox. More information on converting
-	      description logic entailments to datalog can be found on\cite{descr_to_dlog}.
+	      on \ref{program:rhodfs}, is relatively simple, but complex, there being only a single relation that is mutually recursive in every single rule. RhoDFS-s \ref{program:rhodfss} is
+	      an improved version of RhoDFS, that creates new relations for every single constant combination in the original program, avoiding every body atom implying a full dataset, mimicking
+	      the relational selection. The last ruleset, OWL2RL, has over 100 rules and is by far the most complex, representing the lower bound of OWL2RL implications, specific of the LUBM
+	      Tbox. More information on converting description logic entailments to datalog can be found on\cite{descr_to_dlog}.
 	\item \textbf{RMAT1k}. is a graph generated by the \verb|rmat| profile of the GT\cite{gtgraph} graph generator, used to benchmark various other reasoners\cite{recstep}\cite{bigdatalog}.
 	      The dataset is a graph with ten times the number of edges as vertices, that follows an inverse power-law distribution.
 	\item \textbf{RAND1k} is also a graph generated with the \verb|rand| profile of GT. The dataset is comprised of a graph that has one thousand edges, with each
 	      having 0.01 probability of being connected to every other. In spite of having a small number of nodes, it is incredibly dense, with the output of the transitive closure program having almost
 	      a hundred times more edges than the initial graph.
 \end{itemize}
-
 \subsection{Runtime comparison}
 \begin{table*}
 	\caption{Runtime Experimental Results}
@@ -977,7 +944,6 @@ including LUBM\cite{lubm}, are synthetic, with the difference being that there a
 	\end{center}
 	\label{tab:mainbenchmark}
 \end{table*}
-
 Table \ref{tab:mainbenchmark} pictures the main benchmark, in which three measurements, Mat, +, and -, for every batch size, are recorded. All measurements are in
 \textbf{seconds}. If the batch size is 75\%, then Mat is the amount of time taken to materialize 75\% of the data, using regular semi-naive evaluation, + is how much
 incremental materialization, of 25\% of the data, the remaining amount, also using semi-naive evaluation, took, and lastly, - is how much time DRED has taken to delete
@@ -1012,13 +978,10 @@ In sum, diff and $\text{diff}^{I}$ performed predictably irrespective of the dat
 times for updates, while at the same time being symmetric. All other reasoners did not show the expected incremental behavior, neither for semi-naive evaluation nor DRED unless
 the update size was small, which is not necessarily a hindrance in practice, since rarely if ever a system will receive an update that is bigger than 10\% of the original size
 of the data.
-
 \subsection{Peak memory usage comparison.}
-
 The results of the previous subsection cannot be seen in an entirely positive light without there being consideration for memory usage. DD relies on multiple
 in-memory indexes to keep track of all changes, and as it was seen, it entirely failed a benchmark due to running out of memory, thus, in this section we analyze the results of
 measuring peak memory usage over the previous experiments.
-
 \begin{table*}
 	\caption{Memory usage experimental results}
 	\begin{center}
@@ -1039,7 +1002,6 @@ measuring peak memory usage over the previous experiments.
 	\end{center}
 	\label{tab:memorybenchmark}
 \end{table*}
-
 Table \ref{tab:memorybenchmark} presents the peak memory usage for each of the methods and programs across different datasets. Memory usage is presented in megabytes. LUBM1
 occupies 20 megabytes of disk space, RAND-1k and RMAT-1k, respectively, 100 kilobytes.
 
@@ -1059,9 +1021,7 @@ While there are major differences in runtime among all reasoners, with some bein
 very large program, there are no clear winners, implying that the memory requirements for DD in itself are not greater than regular reasoners, save for
 highly-iterative dataflows, and remains proportional to the computation. The starkest example of this is for the owl2rl program, which in spite of containing over a hundred
 rules, does not output much more data than rdfs/rdfs-s.
-
 \section{Conclusion}
-
 In this article we introduced a novel datalog reasoner, with two different algorithms, whose core value proposition is in it using the promising, but relatively obscure,
 DD model of computation, and evaluated it against two other reference implementations that shared as many components as reasonable. We also described an
 indexing method that significantly sped up a often overlooked method of implementing reasoning, the substitution method, that was shown to have solved many pathological
@@ -1072,6 +1032,50 @@ variants of datalog, and most importantly, making it distributed, which DD provi
 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{software}
+
+\appendix
+
+\section{Programs}
+\begin{exmp}{RhoDFS inference rules}
+	\begin{align*}
+		T(?x, ?y, ?z) \leftarrow                 & rdf(?x, ?y, ?z)                \\
+		T(?y, rdf:type, ?x) \leftarrow           & T(?a, rdfs:domain, ?x),        \\
+		                                         & T(?y, ?a, ?z)                  \\
+		T(?z, rdf:type, ?x) \leftarrow           & T(?a, rdfs:range, ?x),         \\
+		                                         & T(?y, ?a, ?z)                  \\
+		T(?x, rdfs:subPropertyOf, ?z) \leftarrow & T(?x, rdfs:subPropertyOf, ?y), \\
+		                                         & T(?y, rdfs:subPropertyOf, ?z)  \\
+		T(?x, rdfs:subClassOf, ?z) \leftarrow    & T(?x, rdfs:subClassOf, ?y),    \\
+		                                         & T(?y, rdfs:subClassOf, ?z)     \\
+		T(?z, rdf:type, ?y) \leftarrow           & T(?x, rdfs:subClassOf, ?y),    \\
+		                                         & T(?z, rdf:type, ?x)            \\
+		T(?x, ?b, ?y) \leftarrow                 & T(?a, rdfs:subPropertyOf, ?b), \\
+		                                         & T(?x, ?a, ?y)
+	\end{align*}
+	\label{program:rhodfs}
+\end{exmp}
+\begin{exmp}{RhoDFS-s inference rules}
+	\begin{align*}
+		rdfs:domain(?a, ?x) \leftarrow        & rdf(?a, rdfs:domain, ?x)        \\
+		rdfs:range(?a, ?x) \leftarrow         & rdf(?a, rdfs:range, ?x)         \\
+		rdf:type(?y, ?x) \leftarrow           & rdf(?y, rdf:type, ?x)           \\
+		rdfs:subPropertyOf(?x, ?z) \leftarrow & rdf(?x, rdfs:subPropertyOf, ?z) \\
+		rdfs:subClassOf(?x, ?z) \leftarrow    & rdf(?x, rdfs:subClassOf, ?z)    \\
+		rdf:type(?y, ?x) \leftarrow           & rdfs:domain(?a, ?x),            \\
+		                                      & rdf(?y, ?a, ?z)                 \\
+		rdf:type(?z, ?x) \leftarrow           & rdfs:range(?a, ?x),             \\
+		                                      & rdf(?y, ?a, ?z)                 \\
+		rdfs:subPropertyOf(?x, ?z) \leftarrow & rdfs:subPropertyOf(?x, ?y),     \\
+		                                      & rdfs:subPropertyOf(?y, ?z)      \\
+		rdfs:subClassOf(?x, ?z) \leftarrow    & rdfs:subClassOf(?x, ?y),        \\
+		                                      & rdfs:subClassOf(?y, ?z)         \\
+		rdf:type(?z, ?y) \leftarrow           & rdfs:subClassOf(?x, ?y),        \\
+		                                      & rdf:type(?z, ?x)                \\
+		rdf(?x, ?b, ?y) \leftarrow            & rdfs:subPropertyOf(?a, ?b),     \\
+		                                      & T(?x, ?a, ?y)
+	\end{align*}
+	\label{program:rhodfss}
+\end{exmp}
 
 \end{document}
 \endinput
